src/test/ui/consts/const_fn_floating_point_arithmetic.stock.stderr
error[E0658]: floating point arithmetic is not allowed in constant functions
  --> $DIR/const_fn_floating_point_arithmetic.rs:8:31
   |
LL | const fn add(f: f32) -> f32 { f + 2.0 }
   |                               ^^^^^^^
   |
   = note: see issue #57241 <https://github.com/rust-lang/rust/issues/57241> for more information
   = help: add `#![feature(const_fn_floating_point_arithmetic)]` to the crate attributes to enable

error[E0658]: floating point arithmetic is not allowed in constant functions
  --> $DIR/const_fn_floating_point_arithmetic.rs:10:31
   |
LL | const fn sub(f: f32) -> f32 { 2.0 - f }
   |                               ^^^^^^^
   |
   = note: see issue #57241 <https://github.com/rust-lang/rust/issues/57241> for more information
   = help: add `#![feature(const_fn_floating_point_arithmetic)]` to the crate attributes to enable

error[E0658]: floating point arithmetic is not allowed in constant functions
  --> $DIR/const_fn_floating_point_arithmetic.rs:12:39
   |
LL | const fn mul(f: f32, g: f32) -> f32 { f * g }
   |                                       ^^^^^
   |
   = note: see issue #57241 <https://github.com/rust-lang/rust/issues/57241> for more information
   = help: add `#![feature(const_fn_floating_point_arithmetic)]` to the crate attributes to enable

error[E0658]: floating point arithmetic is not allowed in constant functions
  --> $DIR/const_fn_floating_point_arithmetic.rs:14:39
   |
LL | const fn div(f: f32, g: f32) -> f32 { f / g }
   |                                       ^^^^^
   |
   = note: see issue #57241 <https://github.com/rust-lang/rust/issues/57241> for more information
   = help: add `#![feature(const_fn_floating_point_arithmetic)]` to the crate attributes to enable

error[E0658]: floating point arithmetic is not allowed in constant functions
  --> $DIR/const_fn_floating_point_arithmetic.rs:16:31
   |
LL | const fn neg(f: f32) -> f32 { -f }
   |                               ^^
   |
   = note: see issue #57241 <https://github.com/rust-lang/rust/issues/57241> for more information
   = help: add `#![feature(const_fn_floating_point_arithmetic)]` to the crate attributes to enable

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0658`.
